// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardBalance renders correctly 1`] = `
.c2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.c1 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

@supports (grid-gap:0) {
  .c0 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .c0 > * + * {
    margin-top: 0;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Bitcoin
  </p>
  <p
    className="c2"
  >
    1526.56 
    <abbr
      className="c3"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders correctly with a badge 1`] = `
.c2 {
  color: #FFF;
  background-color: #0CD664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

.c4 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.c3 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c1 {
  margin-bottom: 1rem;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

@supports (grid-gap:0) {
  .c0 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .c0 > * + * {
    margin-top: 0;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span
      className="c2"
    >
      Active
    </span>
  </p>
  <p
    className="c3"
  >
    Bitcoin
  </p>
  <p
    className="c4"
  >
    1526.56 
    <abbr
      className="c5"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders with currency if no unitTitle provided 1`] = `
.c2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.c1 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

@supports (grid-gap:0) {
  .c0 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .c0 > * + * {
    margin-top: 0;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Bitcoin
  </p>
  <p
    className="c2"
  >
    1526.56 
    <abbr
      className="c3"
      title="Bitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;
